fix: fixed modal scroll on mobile

--- a/FRONTEND/src/components/AddProductModal/style.css
+++ b/FRONTEND/src/components/AddProductModal/style.css
@@ -1,3 +1,8 @@
+body.modal-open {
+  overflow: hidden;
+}
+
+
 .modal-backdrop {
   animation: fade-in 1s
 }
